updates portfolio to include Angular projects

--- a/index.html
+++ b/index.html
@@ -95,6 +95,57 @@
 
       <h3 class="white-text">Projects</h3>
 
+      <div class="row">
+        <h3 class="col s8 offset-s2 white-text">Angular Projects</h3>
+
+        <div class="card col s12 l5">
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="http://pump-attendant-rabbit-48751.bitballoon.com/"><img src="imgs/isItRottenSS.png"></a>
+          </div>
+          <div class="card-content">
+            <div class="row">
+              <div class="col s6">
+              <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/is-it-rotten"><i class="fa fa-github right"></i></a></span>
+              <h6>Solo project developed in 2 days.
+                Is It Rotten? is a convenient tool to look up movies on IMDB and Rotten Tomatoes at the same time.
+                This give you access to search films and then qucikly switch between ratings from IMDB and Rotten Tomatoes,
+                 giving you all the info you need with out the ads and extra distractions.
+              </h6>
+              </div>
+              <div class="col s6">
+                <ul class="cardList">
+                  <li class="skills right">AngularJS</li>
+                  <li class="skills right"><a href="http://www.omdbapi.com/">OMDb API</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <div class="card col s12 l5 right">
+        <div class="card-image waves-effect waves-block waves-light">
+          <a href="http://estates-officer-melanie-43605.bitballoon.com/"><img src="imgs/fijiWaterSS.png"></a>
+        </div>
+        <div class="card-content">
+          <div class="row">
+            <div class="col s5">
+              <span class="card-title">Fiji Water ACC. <a href="https://github.com/mrogach2350/angularFiji"><i class="fa fa-github right"></i></a></span>
+              <h6>Solo project developed in 7 Dev hours.
+                Developed for Symphony Commerce Code Challenge utlizing AngularJS and
+                Symphony's dummy API to create a mock sales site.</h6>
+              </div>
+              <div class="col s6">
+                <ul class="cardList">
+                  <li class="skills right">Angular</li>
+                  <li class="skills right">External API</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
             <a href="http://rpgloot.meteorapp.com/"><img src="imgs/rpgLootImg.png"></a>
@@ -116,8 +167,8 @@
                 </ul>
               </div>
             </div>
+          </div>
         </div>
-      </div>
 
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
