--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
 
       <hr>
 
-      <h3 class="white-text">Projects</h3>
-
       <div class="row">
         <h3 class="col s8 offset-s2 white-text">Angular Projects</h3>
 
@@ -130,13 +128,13 @@
           <div class="row">
             <div class="col s5">
               <span class="card-title">Fiji Water ACC. <a href="https://github.com/mrogach2350/angularFiji"><i class="fa fa-github right"></i></a></span>
-              <h6>Solo project developed in 7 Dev hours.
+              <h6>Solo project developed in 7 hours.
                 Developed for Symphony Commerce Code Challenge utlizing AngularJS and
                 Symphony's dummy API to create a mock sales site.</h6>
               </div>
               <div class="col s6">
                 <ul class="cardList">
-                  <li class="skills right">Angular</li>
+                  <li class="skills right">AngularJS</li>
                   <li class="skills right">External API</li>
                 </ul>
               </div>
@@ -145,6 +143,7 @@
         </div>
       </div>
 
+      <h3 class="col s8 offset-s2 white-text">Meteor Project</h3>
 
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
@@ -170,7 +169,12 @@
           </div>
         </div>
 
-        <div class="card">
+
+      <div class="row">
+
+        <h3 class="col s8 offset-s2 white-text">Rails Projects</h3>
+
+        <div class="card col s12 l6">
           <div class="card-image waves-effect waves-block waves-light">
             <a href="https://view-finder.herokuapp.com/"><img src="imgs/viewFinderImg.png"></a>
           </div>
@@ -196,7 +200,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card col s12 l5 right">
           <div class="card-image waves-effect waves-block waves-light">
             <a href="https://vagabond-internauts.herokuapp.com/"><img src="imgs/vagabondImg.png"></a>
           </div>
@@ -219,6 +223,8 @@
             </div>
           </div>
       </div>
+    </div>
+
     </main>
   </body>
 </html>
