abstracts media queries css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       <link href="https://fonts.googleapis.com/css?family=Open+Sans|Russo+One" rel="stylesheet">
       <!-- Font Awesome CDN -->
       <script src="https://use.fontawesome.com/42e74b9989.js"></script>
+    <!-- Personal Code -->
       <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
-    <!-- Scripts -->
+      <link rel="stylesheet" href="css/mobile.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="css/largeScreen.css" media="screen" title="no title" charset="utf-8">
       <script type="text/javascript" src="js/app.js"></script>
     <title>Rogachevsky</title>
   </head>
