--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
 
       <div class="row">
         <h5 class="skill-header col s12 white-text">Technical Skills</h5>
-        <ul class="list col s6 l3">
+        <ul class="list col s12 m6 l3">
           <li class="skill-header">Languages</li>
           <li class="skills">JavaScript</li>
           <li class="skills">Ruby</li>
           <li class="skills">HTML</li>
           <li class="skills">CSS</li>
         </ul>
-        <ul class="list col s6 l3">
+        <ul class="list col s12 m6 l3">
           <li class="skill-header">Front-End</li>
           <li class="skills">Angular</li>
           <li class="skills">Blaze</li>
           <li class="skills">React</li>
           <li class="skills">Bootstrap</li>
         </ul>
-        <ul class="list col s6 l3">
+        <ul class="list col s12 m6 l3">
           <li class="skill-header">Back-End</li>
           <li class="skills">Rails</li>
           <li class="skills">Node</li>
           <li class="skills">Express</li>
           <li class="skills">MongoDB</li>
         </ul>
-        <ul class="list col s6 l3">
+        <ul class="list col s12 m6 l3">
           <li class="skill-header"> Full-Stack/Other </li>
           <li class="skills">Meteor</li>
           <li class="skills">Ember</li>
@@ -104,7 +104,7 @@
           </div>
           <div class="card-content">
             <div class="row">
-              <div class="col s6">
+              <div class="col s12">
               <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/is-it-rotten"><i class="fa fa-github right"></i></a></span>
               <h6>Solo project developed in 2 days.
                 Is It Rotten? is a convenient tool to look up movies on IMDB and Rotten Tomatoes at the same time.
@@ -112,7 +112,7 @@
                  giving you all the info you need with out the ads and extra distractions.
               </h6>
               </div>
-              <div class="col s6">
+              <div class="col s12">
                 <ul class="cardList">
                   <li class="skills right">AngularJS</li>
                   <li class="skills right"><a href="http://www.omdbapi.com/">OMDb API</a></li>
@@ -128,13 +128,13 @@
         </div>
         <div class="card-content">
           <div class="row">
-            <div class="col s5">
+            <div class="col s12">
               <span class="card-title">Fiji Water ACC. <a href="https://github.com/mrogach2350/angularFiji"><i class="fa fa-github right"></i></a></span>
               <h6>Solo project developed in 7 hours.
                 Developed for Symphony Commerce Code Challenge utlizing AngularJS and
                 Symphony's dummy API to create a mock sales site.</h6>
               </div>
-              <div class="col s6">
+              <div class="col s12">
                 <ul class="cardList">
                   <li class="skills right">AngularJS</li>
                   <li class="skills right">External API</li>
@@ -153,7 +153,7 @@
           </div>
           <div class="card-content">
             <div class="row">
-              <div class="col s6">
+              <div class="col s12">
               <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/rpgLoot"><i class="fa fa-github right"></i></a></span>
               <h6>Solo project developed in 6 days.
                 Development time includes time learning Meteor.
@@ -161,7 +161,7 @@
                 emphasis on cross platform compatibility and instant,
                 seamless responses.</h6>
               </div>
-              <div class="col s6">
+              <div class="col s12">
                 <ul class="cardList">
                   <li class="skills">Meteor</li>
                   <li class="skills">BlazeJS</li>
@@ -182,7 +182,7 @@
           </div>
           <div class="card-content">
             <div class="row">
-              <div class="col s6">
+              <div class="col s12">
                 <span class="card-title">ViewFinder <a href="https://github.com/mrogach2350/ViewFinder"><i class="fa fa-github right"></i></a></span>
                 <h6>
                   Developed with three other developers over the course of 7 days.
@@ -190,7 +190,7 @@
                   location based photography in San Francisco.
                   This application had special emphasis on mobile compatibility. </h6>
               </div>
-              <div class="col s6">
+              <div class="col s12">
                 <ul class="cardList">
                   <li class="skills">Ruby on Rails</li>
                   <li class="skills">MaterializeCSS</li>
@@ -208,14 +208,14 @@
           </div>
           <div class="card-content">
             <div class="row">
-              <div class="col s6">
+              <div class="col s12">
                 <span class="card-title">Vagabond <a href="https://github.com/mrogach2350/internauts-project-vagabond"><i class="fa fa-github right"></i></a></span>
                 <h6>
                   Developed with three other developers.
                   Our client requested a travel tip app aimed at children.
                   We created a colorful, easy to use app over the course of 5 days.</h6>
               </div>
-              <div class="col s6">
+              <div class="col s12">
                 <ul class="cardList">
                   <li class="skills">Ruby on Rails</li>
                   <li class="skills">Flexbox</li>
