--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="https://github.com/mrogach2350"><i class="waves-effect fa fa-github fa-2x"></i> Collaborate</a></li>
         <li><a href="https://www.linkedin.com/in/rogachevsky"><i class="waves-effect fa fa-linkedin-square fa-2x"></i> Connect</a></li>
         <li><a href="mailto:m.rogach@gmail.com"><i class="waves-effect fa fa-envelope fa-2x"></i> Contact</a></li>
-        <li><a href="assets/resume.pdf"><i class="waves-effect fa fa-file-pdf-o fa-2x"></i> CV</a></li>
+        <li><a href="assets/CV_Rogachevsky.pdf"><i class="waves-effect fa fa-file-pdf-o fa-2x"></i> CV</a></li>
         <li><div class="divider"></div></li>
         <li><a class="subheader">Projects</a></li>
         <li><a href="#rpgLoot"><i class="waves-effect fa fa-shield fa-2x"></i> rpgLoot</a></li>
