updates resume and adds react project

--- a/index.html
+++ b/index.html
@@ -67,35 +67,53 @@
           <li class="skill-header">Languages</li>
           <li class="skills">JavaScript</li>
           <li class="skills">Ruby</li>
-          <li class="skills">HTML</li>
-          <li class="skills">CSS</li>
+          <li class="skills">HTML/CSS</li>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Front-End</li>
           <li class="skills">Angular</li>
-          <li class="skills">Blaze</li>
           <li class="skills">React</li>
-          <li class="skills">Bootstrap</li>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Back-End</li>
           <li class="skills">Rails</li>
           <li class="skills">Node</li>
-          <li class="skills">Express</li>
-          <li class="skills">MongoDB</li>
         </ul>
         <ul class="list col s12 m6 l3">
-          <li class="skill-header"> Full-Stack/Other </li>
+          <li class="skill-header"> Other </li>
           <li class="skills">Meteor</li>
-          <li class="skills">Ember</li>
         </ul>
       </div>
-
-
 
       <hr>
 
       <div class="row">
+        <h3 class="col s8 offset-s2 white-text">React Project</h3>
+
+        <div class="card col s12 l12">
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="http://tiny-tube.herokuapp.com/"><img src="imgs/tinyTube.png"></a>
+          </div>
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12">
+              <span class="card-title">Tiny Tube <a href="https://github.com/mrogach2350/tiny-tube"><i class="fa fa-github right"></i></a></span>
+              <h6>
+                Dev Team: 4
+                <br>
+                Tiny Tube is a simple YouTube clone built in ReactJS and hosted on Heroku.
+              </h6>
+              </div>
+              <div class="col s12">
+                <ul class="cardList">
+                  <li class="skills right">React</li>
+                  <li class="skills right">YouTube API</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <h3 class="col s8 offset-s2 white-text">Angular Projects</h3>
 
         <div class="card col s12 l5">
@@ -105,8 +123,10 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12">
-              <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/is-it-rotten"><i class="fa fa-github right"></i></a></span>
-              <h6>Solo project developed in 2 days.
+              <span class="card-title">Is It Rotten <a href="https://github.com/mrogach2350/is-it-rotten"><i class="fa fa-github right"></i></a></span>
+              <h6>
+                Dev Team: Solo
+                <br>
                 Is It Rotten? is a convenient tool to look up movies on IMDB and Rotten Tomatoes at the same time.
                 This give you access to search films and then qucikly switch between ratings from IMDB and Rotten Tomatoes,
                  giving you all the info you need with out the ads and extra distractions.
@@ -130,7 +150,9 @@
           <div class="row">
             <div class="col s12">
               <span class="card-title">Fiji Water ACC. <a href="https://github.com/mrogach2350/angularFiji"><i class="fa fa-github right"></i></a></span>
-              <h6>Solo project developed in 7 hours.
+              <h6>
+                Dev Team: Solo
+                <br>
                 Developed for Symphony Commerce Code Challenge utlizing AngularJS and
                 Symphony's dummy API to create a mock sales site.</h6>
               </div>
@@ -155,7 +177,9 @@
             <div class="row">
               <div class="col s12">
               <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/rpgLoot"><i class="fa fa-github right"></i></a></span>
-              <h6>Solo project developed in 6 days.
+              <h6>
+                Dev Team: Solo
+                <br>
                 Development time includes time learning Meteor.
                 This application functions as a treasure distribution tool with
                 emphasis on cross platform compatibility and instant,
@@ -185,7 +209,8 @@
               <div class="col s12">
                 <span class="card-title">ViewFinder <a href="https://github.com/mrogach2350/ViewFinder"><i class="fa fa-github right"></i></a></span>
                 <h6>
-                  Developed with three other developers over the course of 7 days.
+                  Dev Team: 4
+                  <br>
                   Our team was able to ideate, plan, and develop a full stack application for sharing
                   location based photography in San Francisco.
                   This application had special emphasis on mobile compatibility. </h6>
@@ -211,7 +236,8 @@
               <div class="col s12">
                 <span class="card-title">Vagabond <a href="https://github.com/mrogach2350/internauts-project-vagabond"><i class="fa fa-github right"></i></a></span>
                 <h6>
-                  Developed with three other developers.
+                  Dev Team: 4
+                  <br>
                   Our client requested a travel tip app aimed at children.
                   We created a colorful, easy to use app over the course of 5 days.</h6>
               </div>
