--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
   <body>
 
     <ul id="slide-out" class="side-nav fixed">
-        <li><div class="userView">
-        </div></li>
-        <li><a class="subheader">Michael Rogachevsky</a></li>
-        <li><a href="https://github.com/mrogach2350"><i class="waves-effect fa fa-github fa-2x"></i> Collaborate</a></li>
-        <li><a href="https://www.linkedin.com/in/rogachevsky"><i class="waves-effect fa fa-linkedin-square fa-2x"></i> Connect</a></li>
-        <li><a href="mailto:m.rogach@gmail.com"><i class="waves-effect fa fa-envelope fa-2x"></i> Contact</a></li>
-        <li><a href="assets/CV_Rogachevsky.pdf"><i class="waves-effect fa fa-file-pdf-o fa-2x"></i> CV</a></li>
-        <li><div class="divider"></div></li>
-        <li><a class="subheader">Projects</a></li>
-        <li><a href="#rpgLoot"><i class="waves-effect fa fa-shield fa-2x"></i> rpgLoot</a></li>
-        <li><a href="#viewFinder"><i class="waves-effect fa fa-camera fa-2x"></i> ViewFinder</a></li>
-        <li><a href="#vagabond"><i class="waves-effect fa fa-telegram fa-2x"></i>Vagabond</a></li>
+      <li><div class="userView">
+      </div></li>
+      <li><a class="subheader">Michael Rogachevsky</a></li>
+      <li><a href="https://github.com/mrogach2350"><i class="waves-effect fa fa-github fa-2x"></i> Collaborate</a></li>
+      <li><a href="https://www.linkedin.com/in/rogachevsky"><i class="waves-effect fa fa-linkedin-square fa-2x"></i> Connect</a></li>
+      <li><a href="mailto:m.rogach@gmail.com"><i class="waves-effect fa fa-envelope fa-2x"></i> Contact</a></li>
+      <li><a href="assets/CV_Rogachevsky.pdf"><i class="waves-effect fa fa-file-pdf-o fa-2x"></i> CV</a></li>
+      <li><div class="divider"></div></li>
+      <li><a class="subheader">Projects</a></li>
+      <li><a href="#rpgLoot"><i class="waves-effect fa fa-shield fa-2x"></i> rpgLoot</a></li>
+      <li><a href="#viewFinder"><i class="waves-effect fa fa-camera fa-2x"></i> ViewFinder</a></li>
+      <li><a href="#vagabond"><i class="waves-effect fa fa-telegram fa-2x"></i>Vagabond</a></li>
     </ul>
 
     <main>
@@ -41,10 +41,10 @@
       <h3 class="white-text"><i class="fa fa-compass fa-spin"></i> Bay Area | Developer <i class="fa fa-terminal"></i></h3>
 
       <div class="row navs">
-          <a class="navLink col hidden" href="https://github.com/mrogach2350"><h4><i class="fa fa-github fa-1x"></i> Collaborate</h4></a>
-          <a class="navLink col hidden" href="https://www.linkedin.com/in/rogachevsky"><h4><i class="fa fa-linkedin-square fa-1x"></i> Connect</h4></a>
-          <a class="navLink col hidden" href="mailto:m.rogach@gmail.com"><h4><i class="fa fa-envelope fa-1x"></i> Contact</h4></a>
-          <a class="navLink col hidden" href="assets/resume.pdf"><h4><i class="fa fa-file-pdf-o fa-1x"></i> CV</h4></a>
+        <a class="navLink col hidden" href="https://github.com/mrogach2350"><h4><i class="fa fa-github fa-1x"></i> Collaborate</h4></a>
+        <a class="navLink col hidden" href="https://www.linkedin.com/in/rogachevsky"><h4><i class="fa fa-linkedin-square fa-1x"></i> Connect</h4></a>
+        <a class="navLink col hidden" href="mailto:m.rogach@gmail.com"><h4><i class="fa fa-envelope fa-1x"></i> Contact</h4></a>
+        <a class="navLink col hidden" href="assets/resume.pdf"><h4><i class="fa fa-file-pdf-o fa-1x"></i> CV</h4></a>
       </div>
 
       <hr>
@@ -61,146 +61,150 @@
 
       <hr>
 
+      <h5 class="skill-header white-text">Technical Skills</h5>
       <div class="row">
-        <h5 class="skill-header col s12 white-text">Technical Skills</h5>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Languages</li>
-          <li class="skills">JavaScript</li>
-          <li class="skills">Ruby</li>
-          <li class="skills">HTML/CSS</li>
+          <li class="skill">JavaScript</li>
+          <li class="skill">Ruby</li>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Front-End</li>
-          <li class="skills">Angular</li>
-          <li class="skills">React</li>
+          <li class="skill">Angular</li>
+          <li class="skill">React</li>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Back-End</li>
-          <li class="skills">Rails</li>
-          <li class="skills">Node</li>
+          <li class="skill">Rails</li>
+          <li class="skill">Node</li>
         </ul>
         <ul class="list col s12 m6 l3">
-          <li class="skill-header"> Other </li>
-          <li class="skills">Meteor</li>
+          <li class="skill-header">Other</li>
+          <li class="skill">Meteor</li>
         </ul>
       </div>
 
       <hr>
 
       <div class="row">
-        <h3 class="col s8 offset-s2 white-text">React Project</h3>
-
-        <div class="card col s12 l12">
-          <div class="card-image waves-effect waves-block waves-light">
-            <a href="http://tiny-tube.herokuapp.com/"><img src="imgs/tinyTube.png"></a>
-          </div>
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12">
-              <span class="card-title">Tiny Tube <a href="https://github.com/mrogach2350/tiny-tube"><i class="fa fa-github right"></i></a></span>
-              <h6>
-                Dev Team: 4
-                <br>
-                Tiny Tube is a simple YouTube clone built in ReactJS and hosted on Heroku.
-              </h6>
-              </div>
-              <div class="col s12">
-                <ul class="cardList">
-                  <li class="skills right">React</li>
-                  <li class="skills right">YouTube API</li>
-                </ul>
+        <div class="col s12 l6">
+          <h3 class="col s8 offset-s2 white-text">React Project</h3>
+          <div class="card col s12">
+            <div class="card-image waves-effect waves-block waves-light">
+              <a href="http://tiny-tube.herokuapp.com/"><img src="imgs/tinyTube.png"></a>
+            </div>
+            <div class="card-content">
+              <div class="row">
+                <div class="col s12">
+                  <span class="card-title">Tiny Tube <a href="https://github.com/mrogach2350/tiny-tube"><i class="fa fa-github right"></i></a></span>
+                  <h6>
+                    Dev Team: 4
+                    <br>
+                    Tiny Tube is a simple YouTube clone built in ReactJS and hosted on Heroku.
+                  </h6>
+                </div>
+                <div class="col s12">
+                  <ul class="cardList">
+                    <li class="skills">React</li>
+                    <li class="skills">YouTube API</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <h3 class="col s8 offset-s2 white-text">Angular Projects</h3>
-
-        <div class="card col s12 l5">
-          <div class="card-image waves-effect waves-block waves-light">
-            <a href="http://pump-attendant-rabbit-48751.bitballoon.com/"><img src="imgs/isItRottenSS.png"></a>
-          </div>
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12">
-              <span class="card-title">Is It Rotten <a href="https://github.com/mrogach2350/is-it-rotten"><i class="fa fa-github right"></i></a></span>
-              <h6>
-                Dev Team: Solo
-                <br>
-                Is It Rotten? is a convenient tool to look up movies on IMDB and Rotten Tomatoes at the same time.
-                This give you access to search films and then qucikly switch between ratings from IMDB and Rotten Tomatoes,
-                 giving you all the info you need with out the ads and extra distractions.
-              </h6>
+        <div class="col s12 l6">
+          <h3 class="col s8 offset-s2 white-text">Meteor Project</h3>
+            <div class="card col s12">
+              <div class="card-image waves-effect waves-block waves-light">
+                <a href="http://rpgloot.meteorapp.com/"><img src="imgs/rpgLootImg.png"></a>
               </div>
-              <div class="col s12">
-                <ul class="cardList">
-                  <li class="skills right">AngularJS</li>
-                  <li class="skills right"><a href="http://www.omdbapi.com/">OMDb API</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      <div class="card col s12 l5 right">
-        <div class="card-image waves-effect waves-block waves-light">
-          <a href="http://estates-officer-melanie-43605.bitballoon.com/"><img src="imgs/fijiWaterSS.png"></a>
-        </div>
-        <div class="card-content">
-          <div class="row">
-            <div class="col s12">
-              <span class="card-title">Fiji Water ACC. <a href="https://github.com/mrogach2350/angularFiji"><i class="fa fa-github right"></i></a></span>
-              <h6>
-                Dev Team: Solo
-                <br>
-                Developed for Symphony Commerce Code Challenge utlizing AngularJS and
-                Symphony's dummy API to create a mock sales site.</h6>
-              </div>
-              <div class="col s12">
-                <ul class="cardList">
-                  <li class="skills right">AngularJS</li>
-                  <li class="skills right">External API</li>
-                </ul>
+              <div class="card-content">
+                <div class="row">
+                  <div class="col s12">
+                  <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/rpgLoot"><i class="fa fa-github right"></i></a></span>
+                  <h6>
+                    Dev Team: Solo
+                    <br>
+                    Development time includes time learning Meteor.
+                    This application functions as a treasure distribution tool with
+                    emphasis on cross platform compatibility and instant,
+                    seamless responses.</h6>
+                  </div>
+                  <div class="col s12">
+                    <ul class="cardList">
+                      <li class="skills">Meteor</li>
+                      <li class="skills">BlazeJS</li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
 
-      <h3 class="col s8 offset-s2 white-text">Meteor Project</h3>
-
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <a href="http://rpgloot.meteorapp.com/"><img src="imgs/rpgLootImg.png"></a>
-          </div>
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12">
-              <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/rpgLoot"><i class="fa fa-github right"></i></a></span>
-              <h6>
-                Dev Team: Solo
-                <br>
-                Development time includes time learning Meteor.
-                This application functions as a treasure distribution tool with
-                emphasis on cross platform compatibility and instant,
-                seamless responses.</h6>
-              </div>
-              <div class="col s12">
-                <ul class="cardList">
-                  <li class="skills">Meteor</li>
-                  <li class="skills">BlazeJS</li>
-                </ul>
+      <div class="row">
+        <h3 class="col s8 offset-s2 white-text">Angular Projects</h3>
+        <div class="col s12 l6">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <a href="http://pump-attendant-rabbit-48751.bitballoon.com/"><img src="imgs/isItRottenSS.png"></a>
+            </div>
+            <div class="card-content">
+              <div class="row">
+                <div class="col s12">
+                <span class="card-title">Is It Rotten <a href="https://github.com/mrogach2350/is-it-rotten"><i class="fa fa-github right"></i></a></span>
+                <h6>
+                  Dev Team: Solo
+                  <br>
+                  Is It Rotten? is a convenient tool to look up movies on IMDB and Rotten Tomatoes at the same time.
+                  This give you access to search films and then qucikly switch between ratings from IMDB and Rotten Tomatoes,
+                   giving you all the info you need with out the ads and extra distractions.
+                </h6>
+                </div>
+                <div class="col s12">
+                  <ul class="cardList">
+                    <li class="skills">AngularJS</li>
+                    <li class="skills"><a href="http://www.omdbapi.com/">OMDb API</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
+        <div class="col s12 l6 right">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <a href="http://estates-officer-melanie-43605.bitballoon.com/"><img src="imgs/fijiWaterSS.png"></a>
+            </div>
+            <div class="card-content">
+              <div class="row">
+                <div class="col s12">
+                  <span class="card-title">Fiji Water ACC. <a href="https://github.com/mrogach2350/angularFiji"><i class="fa fa-github right"></i></a></span>
+                  <h6>
+                    Dev Team: Solo
+                    <br>
+                    Developed for Symphony Commerce Code Challenge utlizing AngularJS and
+                    Symphony's dummy API to create a mock sales site.</h6>
+                  </div>
+                  <div class="col s12">
+                    <ul class="cardList">
+                      <li class="skills">AngularJS</li>
+                      <li class="skills">External API</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
 
       <div class="row">
-
         <h3 class="col s8 offset-s2 white-text">Rails Projects</h3>
-
-        <div class="card col s12 l6">
+        <div class="col s12 l6">
+        <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
             <a href="https://view-finder.herokuapp.com/"><img src="imgs/viewFinderImg.png"></a>
           </div>
@@ -226,8 +230,10 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="card col s12 l5 right">
+      <div class="col s12 l6 right">
+        <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
             <a href="https://vagabond-internauts.herokuapp.com/"><img src="imgs/vagabondImg.png"></a>
           </div>
@@ -252,6 +258,7 @@
           </div>
       </div>
     </div>
+  </div>
 
     </main>
   </body>
