--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="col s12">
                   <span class="card-title">Tiny Tube <a href="https://github.com/mrogach2350/tiny-tube"><i class="fa fa-github right"></i></a></span>
                   <h6>
-                    Dev Team: 4
+                    Dev Team: Solo
                     <br>
                     Tiny Tube is a simple YouTube clone built in ReactJS and hosted on Heroku.
                   </h6>
