--- a/index.html
+++ b/index.html
@@ -65,30 +65,30 @@
       <div class="row">
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Languages</li>
-          <li class="skill">JavaScript</li>
-          <li class="skill">Ruby</li>
+          <a href="#ES6"><li class="skill">ES6</li></a>
+          <a href="#ruby"><li class="skill">Ruby</li></a>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Front-End</li>
-          <li class="skill">Angular</li>
-          <li class="skill">React</li>
+          <a href="#react"><li class="skill">React</li></a>
+          <a href="#angular"><li class="skill">Angular</li></a>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Back-End</li>
-          <li class="skill">Rails</li>
-          <li class="skill">Node</li>
+          <a href="#ruby"><li class="skill">Rails</li></a>
+          <a href="#react"><li class="skill">Node/NPM</li></a>
         </ul>
         <ul class="list col s12 m6 l3">
           <li class="skill-header">Other</li>
-          <li class="skill">Meteor</li>
+          <a href="#meteor"><li class="skill">Meteor</li></a>
         </ul>
       </div>
 
       <hr>
 
-      <div class="row">
+      <div id="ES6" class="row">
         <div class="col s12 l6">
-          <h3 class="col s8 offset-s2 white-text">React Project</h3>
+          <h3 id="react" class="col s8 offset-s2 white-text">React Project</h3>
           <div class="card col s12">
             <div class="card-image waves-effect waves-block waves-light">
               <a href="http://tiny-tube.herokuapp.com/"><img src="imgs/tinyTube.png"></a>
@@ -115,7 +115,7 @@
         </div>
 
         <div class="col s12 l6">
-          <h3 class="col s8 offset-s2 white-text">Meteor Project</h3>
+          <h3 id="meteor" class="col s8 offset-s2 white-text">Meteor Project</h3>
             <div class="card col s12">
               <div class="card-image waves-effect waves-block waves-light">
                 <a href="http://rpgloot.meteorapp.com/"><img src="imgs/rpgLootImg.png"></a>
@@ -202,7 +202,7 @@
       </div>
 
       <div class="row">
-        <h3 class="col s8 offset-s2 white-text">Rails Projects</h3>
+        <h3 id="ruby" class="col s8 offset-s2 white-text">Rails Projects</h3>
         <div class="col s12 l6">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
