--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </div>
 
       <div class="row">
-        <h3 class="col s8 offset-s2 white-text">Angular Projects</h3>
+        <h3 id="angular" class="col s8 offset-s2 white-text">Angular Projects</h3>
         <div class="col s12 l6">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
