--- a/index.html
+++ b/index.html
@@ -48,42 +48,42 @@
       </div>
 
       <hr>
-
-      <div class="aboutMe white-text">
-        <h5>About Me</h5>
-        <p class="aboutMe">
-          I am a tenacious, ambitious Front-End developer determined to produce
-          high-quality user experiences through collaborative and intuitive
-          design. I look forward to working with dynamic, agile team-members to
-          create stunning applications.
-        </p>
-      </div>
-
-      <hr>
-
-      <h5 class="skill-header white-text">Technical Skills</h5>
       <div class="row">
-        <ul class="list col s12 m6 l3">
-          <li class="skill-header">Languages</li>
-          <a href="#ES6"><li class="skill">ES6</li></a>
-          <a href="#ruby"><li class="skill">Ruby</li></a>
-        </ul>
-        <ul class="list col s12 m6 l3">
-          <li class="skill-header">Front-End</li>
-          <a href="#react"><li class="skill">React</li></a>
-          <a href="#angular"><li class="skill">Angular</li></a>
-        </ul>
-        <ul class="list col s12 m6 l3">
-          <li class="skill-header">Back-End</li>
-          <a href="#ruby"><li class="skill">Rails</li></a>
-          <a href="#react"><li class="skill">Node/NPM</li></a>
-        </ul>
-        <ul class="list col s12 m6 l3">
-          <li class="skill-header">Other</li>
-          <a href="#meteor"><li class="skill">Meteor</li></a>
-        </ul>
-      </div>
+        <div class="aboutMe white-text col s12 l5">
+          <h5 class="center">About Me</h5>
+          <p class="aboutMe">
+            I am a tenacious, ambitious Front-End developer determined to produce
+            high-quality user experiences through collaborative and intuitive
+            design. I look forward to working with dynamic, agile team-members to
+            create stunning applications.
+          </p>
+        </div>
 
+        <div class="col s12 l7">
+          <h5 class="skill-header white-text">Technical Skills</h5>
+          <div class="row">
+            <ul class="list col s12 m6">
+              <li class="skill-header">Languages</li>
+              <a href="#ES6"><li class="skill">ES6</li></a>
+              <a href="#ruby"><li class="skill">Ruby</li></a>
+            </ul>
+            <ul class="list col s12 m6">
+              <li class="skill-header">Front-End</li>
+              <a href="#react"><li class="skill">React</li></a>
+              <a href="#angular"><li class="skill">Angular</li></a>
+            </ul>
+            <ul class="list col s12 m6">
+              <li class="skill-header">Back-End</li>
+              <a href="#ruby"><li class="skill">Rails</li></a>
+              <a href="#react"><li class="skill">Node/NPM</li></a>
+            </ul>
+            <ul class="list col s12 m6">
+              <li class="skill-header">Other</li>
+              <a href="#meteor"><li class="skill">Meteor</li></a>
+            </ul>
+          </div>
+        </div>
+      </div>
       <hr>
 
       <div id="ES6" class="row">
