--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
       <h2 class="white-text">Michael Rogachevsky</h2>
-      <h3 class="white-text"><i class="fa fa-compass fa-spin"></i> Bay Area | Developer <i class="fa fa-terminal"></i></h3>
+      <h3 class="white-text"><i class="fa fa-terminal"></i> Developer | QA Engineer <i class="fa fa-bug"></i></h3>
 
       <div class="row navs">
         <a class="navLink col hidden" href="https://github.com/mrogach2350"><h4><i class="fa fa-github fa-1x"></i> Collaborate</h4></a>
