--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
     </ul>
 
     <main>
-      <h2 class="white-text">Michael Rogachevsky</h2>
-      <h3 class="white-text"><i class="fa fa-terminal"></i> Developer | QA Engineer <i class="fa fa-bug"></i></h3>
+      <div class="row">
+        <h2 class="white-text">Michael Rogachevsky</h2>
+        <div class="col s12 l6">
+          <h3 class="white-text"><i class="fa fa-terminal"></i> Developer</h3>
+        </div>
+        <div class="col s12 l6">
+          <h3 class="white-text">QA Engineer <i class="fa fa-bug"></i></h3>
+        </div>
+      </div>
+      <!-- <h3 class="white-text"><i class="fa fa-terminal"></i> Developer | QA Engineer <i class="fa fa-bug"></i></h3> -->
 
       <div class="row navs">
         <a class="navLink col hidden" href="https://github.com/mrogach2350"><h4><i class="fa fa-github fa-1x"></i> Collaborate</h4></a>
